What's New for PSPRadio 
========================

0.37-pre6
(sandberg) Updated the 3D UI so all options are fitted to the screen.

0.37-pre5 (r623) (12-06-2005)
(raf) Enabled pausing of local streams
(raf) Cleanup/robustness added for play/stop core.
(raf) Corrected log times now that clock changed in sdk
(raf) Created playmodes; defaults to NORMAL (will play next track after current one ends), also has SINGLE and REPEAT modes.
(raf) Completely re-wrote buffering system. (Using stl lists, and optimized buffers). New change from one stream to the next is seamless.
(raf) Made font size configurable in the textui config file. If these settings are set correctly, then the artifacts produced when using outlined/shadowed text should go away. (The downside, is that the number of columns/rows is also modified as these values change.)


0.37-pre4 (r592) (11-23-2005)
(sandberg) Added support for showing the battery status and the current local time.
(raf) TextUI is now more configurable (for listboxes/textmode(font modes))
(raf) Added shadowed font mode for textui.
(raf) Added option to select if file extensions should be displayed or not in textui.
(raf) Added pngs for startup/shutdown of PSPRadio
(raf) Fixed problem where PSPRadio was exiting when it went into screen blank mode.
(raf) Now using pngs designed by Semtex/albadross/HalfastII
(raf) Added better support for suspending/resuming psp.
(Halfast) Minor tweeking of the textui.cfg

0.37-pre3 (r562) (c=r573)
(raf) The initial screen can now be selected in the PSPRadio.cfg file, under SYSTEM/INITIAL_SCREEN
(raf) Can now refresh the playlists from the Options screen.
(raf) Options can now be saved from options screen.
(raf) Some refactoring of options code/pspapp_network. Corrections on loglevels.
(raf) 0.37-pre3b: Corrected the WIFI:AUTOSTARTing.
(raf) 0.37-pre3c: Now you can save and restore USB autostart / wifi autostart / intial screen from the options screen

0.37-pre2